# vala-jetbrains-plugin

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MarketplaceDescription.md  README.md  TODO.md  build.gradle  build.gradle.kts  gradle.properties  qodana.yml  settings.gradle  settings.gradle.kts
.github/: labeler.yml  pr-title-checker-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  change_request.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: change_pr_template.md  feature_pr_template.md  patch_pr_template.md
.github/workflows/: add_to_project.yml  auto-assign.yml  build.yml  labeler.yml  pr-title-checker.yml  release.yml  run-ui-tests.yml
docs/: DevelopmentInfo.md  Features.md  LanguageServer.md  ValaLint.md
docs/parser/: ParserTokens.md
docs/syntax/: DelegateDeclaration.md  ErrorDomainDeclaration.md
docs/testing/: ValaRepoParsingTest.md
gradle/: libs.versions.toml
language-docs/: docs.md
src/main/java/language/: ValaFile.java  ValaFileType.java  ValaIcons.java  ValaLanguage.java
src/main/resources/code_style_showcase/: code_style_sample.vala
src/main/resources/fileTemplates/j2ee/: EditorConfig.ft  MesonBuild.ft  Readme.ft
src/test/java/: IntegrationTestUtils.java  SampleCodeParserTest.java  ValaCodeParserTest.java
src/test/java/parser/: IntegrationTestUtils.java
src/test/vala/samples/meson/dijkstra/: dijkstras_shortest_path.vala  edge.vala  graph.vala  meson.build  sample_weighted_graph_letters.vala  vertex.vala  weighted_graph.vala
(+382 files in other folders)
